refactor: update get jobs with pagination use query dsl, change salary field type to string